[build-system]
#requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
requires = ["scikit-build-core >=0.4.3", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "LBVH"
version = "0.0.13"
authors = [
  { name="Sam Mish", email="samuelpmish@gmail.com" },
]
description = "A small bounding volume hierarchy implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samuelpmish/LBVH"
"Bug Tracker" = "https://github.com/samuelpmish/LBVH/issues"

[tool.scikit-build]
cmake.verbose = true
cmake.args = [
  "-DLBVH_ENABLE_PYTHON_BINDINGS=ON", 
  "-DLBVH_ENABLE_MATHEMATICA_BINDINGS=OFF",
  "-DLBVH_ENABLE_TESTING=OFF"
]
logging.level = "INFO"

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

#sdist.include = ["src/some_generated_file.txt"]
sdist.exclude = ["mathematica"]


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Skip PyPy, CPython 3.12, see https://github.com/pypa/pip/issues/11501
skip = ["cp312-*", "pp*"]

# Only target 64 bit architectures
archs = ["auto64"] 

# Run pytest to ensure that the package was correctly built
test-command = "python {project}/python/numpy_test.py"
test-requires = "numpy"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
